--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
+    "react-router-dom": "^6.2.1",
     "redux": "^4.1.2"
   },
   "devDependencies": {
@@ -23,8 +24,8 @@
     "webpack-dev-server": "^4.7.4"
   },
   "scripts": {
-    "start" : "webpack-dev-server --hot --open",
-    "build" : "webpack"
+    "start": "webpack-dev-server --hot --open",
+    "build": "webpack"
   },
   "author": "ofjangra",
   "license": "ISC"
