--- a/package.json
+++ b/package.json
@@ -21,10 +21,13 @@
     "style-loader": "^3.3.1",
     "webpack": "^5.68.0",
     "webpack-cli": "^4.9.2",
-    "webpack-dev-server": "^4.7.4"
+    "webpack-dev-server": "^4.7.4",
+    "webpack-merge": "^5.8.0"
   },
   "scripts": {
-    "start": "webpack-dev-server --hot --open",
+    "start": "webpack-dev-server --hot --open --config webpack.prod.js",
+    "build:prod" : "webpack --config webpack.prod.js",
+    "build:dev" : "webpack --config webpack.dev.js",
     "build": "webpack"
   },
   "author": "ofjangra",
